k8s-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: captibidadapterfy
    version: 0.0.1
  name: captibidadapterfy
spec:
  ports:
  - name: captibidadapterfy
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: captibidadapterfy
  type: NodePort
